# fastapi

./: .gitignore  app.db  pyproject.toml
app/: main.py
app/api/routes/: auth.py  core.py
app/core/: config.py  lifespan.py  security.py
app/database/: session.py
app/exceptions/: custom_exceptions.py  handlers.py
app/models/: user.py
app/repositories/: user_repository.py
app/schemas/: user.py
app/services/: user_service.py
